[package]
name = "backend"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[dependencies]
actix-web = "4.6.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5", features = ["mysql", "runtime-actix-rustls", "chrono"] }
dotenv = "0.15"
rand = "0.8"
thiserror = "1.0"
env_logger = "0.10.0"
actix-cors = "0.7.0"
chrono = { version = "0.4.38", features = ["serde"] }
argon2 = "0.5.3"
futures-util = "0.3.30"
log = "0.4.22"
actix-files = "0.6.6"

[build-dependencies]
syn = "1"

[dev-dependencies]
actix-rt = "2.10.0"

[profile.release]
opt-level = 3 # 実行速度最適化
#lto = "fat"     # リンクタイム最適化を有効にする
codegen-units = 1  # コード生成ユニットを1に設定し、最適化を最大化